# terminator

./: .gitignore  AGENTS.md  Cargo.toml  README.md  requirements.txt
.agents/summary/: architecture.md  codebase_info.md  components.md  data_models.md  dependencies.md  index.md  interfaces.md  review_notes.md  workflows.md
.kiro/settings/: lsp.json
docs/: README.ar.md  README.de.md  README.es.md  README.fr.md  README.hi.md  README.it.md  README.ja.md  README.ko.md  README.pt.md  README.ru.md  README.th.md  README.zh.md  SDLC.md
scripts/: download_model.py  inference.py
src/: app.rs  audio.rs  bridge.rs  main.rs  theme.rs  ui.rs
tests/: test_audio.rs  test_bridge.rs
