[package]
name = "terminator"
version = "1.0.0"
edition = "2024"
description = "A retro 90s sci-fi terminal AI — talk to a real AI through a neon CRT interface"
license = "Apache-2.0"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
cpal = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
anyhow = "1"
